syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "common/v1/common.proto";

option go_package = "gen/go/user/v1;userv1";

message APIKey {
  string id = 1;
  string user_id = 2;
  string hashed_key = 3;
  string name = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateAPIKeyRequest {
  string user_id = 1;
  string hashed_key = 2;
  string name = 3;
}

message DeleteAPIKeyRequest {
  common.v1.EntityId id = 1;
}

message ListAPIKeysRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message APIKeysResponse {
  common.v1.Status status = 1;
  repeated APIKey keys = 2;
  common.v1.Pagination pagination = 3;
}
