syntax = "proto3";

package workflow.v2;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/spounge-ai/spounge-protos/gen/go/workflow/v2;workflowv2";

message WorkflowConfig {
  string id = 1;
  string user_id = 2;
  string name = 3;
  optional string description = 4;
  int32 version = 5;
  repeated WorkflowStep steps = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message WorkflowStep {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string tool_name = 4;
  google.protobuf.Struct parameters = 5;
  repeated string depends_on = 6;
  optional string secret_id = 7;
}
